--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -26,10 +26,12 @@ ext {
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 	implementation("org.springframework.cloud:spring-cloud-starter-gateway-server-webflux")
+	implementation ("org.springframework.boot:spring-boot-starter-security")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("io.projectreactor:reactor-test") // Optional: for testing reactive flows
+	compileOnly("jakarta.servlet:jakarta.servlet-api:6.0.0")
 }
 
 dependencyManagement {
