successfully connect services

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,24 +1,22 @@
-# ---------- STAGE 1: BUILD ----------
-# Use official Gradle image with JDK
-FROM gradle:8.8-jdk21 AS builder
-
-# Set workdir
+FROM gradle:9.2.0-jdk21 AS builder
 WORKDIR /app
 
-# Copy project files
-COPY . .
+# Copy Gradle files only (cache dependencies)
+COPY build.gradle settings.gradle ./
+COPY gradle ./gradle
 
-# Run Gradle build (bootJar) using pre-installed Gradle
+RUN gradle --no-daemon dependencies
+
+# Now copy the rest of the source code
+COPY src ./src
+
+# Build app
 RUN gradle bootJar --no-daemon
 
-# ---------- STAGE 2: RUNTIME ----------
-# Use lightweight JDK runtime
+# --------------------- Runtime image ---------------------
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
-
-# Copy the built jar from builder stage
 COPY --from=builder /app/build/libs/*.jar app.jar
 
-# Entry point
 ENTRYPOINT ["java", "-jar", "app.jar"]
