--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,24 +1,27 @@
-# ---------- STAGE 1: BUILD ----------
-# Use official Gradle image with JDK
-FROM gradle:8.8-jdk21 AS builder
-
-# Set workdir
+# --------------------- Build stage ---------------------
+FROM gradle:9.2.0-jdk21 AS builder
 WORKDIR /app
 
-# Copy project files
-COPY . .
+# Copy Gradle wrapper and Gradle config first for caching
+COPY gradlew ./
+COPY gradle ./gradle
+COPY build.gradle settings.gradle ./
 
-# Run Gradle build (bootJar) using pre-installed Gradle
-RUN gradle bootJar --no-daemon
+# Copy the source code
+COPY src ./src
 
-# ---------- STAGE 2: RUNTIME ----------
-# Use lightweight JDK runtime
+# Make the wrapper executable
+RUN chmod +x ./gradlew
+
+# Build the Spring Boot JAR
+RUN ./gradlew bootJar --no-daemon
+
+# --------------------- Runtime stage ---------------------
 FROM eclipse-temurin:21-jre
-
 WORKDIR /app
 
 # Copy the built jar from builder stage
 COPY --from=builder /app/build/libs/*.jar app.jar
 
-# Entry point
+# Run the Spring Boot app
 ENTRYPOINT ["java", "-jar", "app.jar"]
