--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,35 +1,49 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:4007}
 
-
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
 spring:
-  spring:
-    security:
-      oauth2:
-        resourceserver:
-          jwt:
-            jwk-set-uri: ${AUTH_SERVICE_URL:http://auth-service:4006}/oauth2/jwks
   cloud:
     gateway:
       server:
         webflux:
           routes:
-            - id: auth-service
-              uri: ${AUTH_SERVICE_URL:http://localhost:4006}
+            - id: notes-service
+              uri: http://notes-service:8082
               predicates:
-                - Path=/auth/**
+                - Path=/api/notes/**
               filters:
                 - StripPrefix=1
-            - id: notes-service
-              uri: ${NOTES_SERVICE_URL:http://localhost:8082}
-              predicates:
-                - Path=/api/notes/**       # matches /api/notes/*
-              filters:
-                - StripPrefix=1            # removes /api from forwarded path
-
             - id: test
               uri: https://www.google.com   # use Google as reachable test
               predicates:
                 - Path=/test/**
               filters:
                 - StripPrefix=1
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://host.docker.internal:4000/oauth2/jwks
+
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: auth-service
+#          uri: http://localhost:4000
+#          predicates:
+#            - Path=/auth/**
+#            - Path=/oauth2/**
+#          filters: []
+          # removes /api from forwarded path
+#
+#        - id: test
+#          uri: https://www.google.com   # use Google as reachable test
+#          predicates:
+#            - Path=/test/**
+#          filters:
+#            - StripPrefix=1
